--- a/.github/workflows/metrodata.yml
+++ b/.github/workflows/metrodata.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
       - name: Checkout My Repo
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.MY_TOKEN }}
 
       - name: Fetch Upstream (Sparse)
         run: |
