--- a/.github/workflows/metrodata.yml
+++ b/.github/workflows/metrodata.yml
@@ -28,8 +28,8 @@ jobs:
         id: compare
         run: |
           # 定义路径变量
-          SOURCE="temp_upstream/Beijing-Subway-Tools/data/beijing"
-          DEST="/data/beijing/"
+          SOURCE="temp_upstream/data/beijing"
+          DEST="data/beijing/"
           ls
           # 【核心对比命令】
           # diff -r 递归对比，-q 只报告是否有差异，--exclude 排除掉可能存在的 .git
