--- a/.github/workflows/metrodata.yml
+++ b/.github/workflows/metrodata.yml
@@ -48,6 +48,7 @@ jobs:
       - name: Commit and Push
         if: steps.compare.outputs.changed == 'true'
         run: |
+          rm -rf temp_upstream
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
           git add .
